@@ -50,9 +50,15 @@
 package com.openexchange.ajax.user;
 
 import static com.openexchange.java.Autoboxing.B;
+
+import java.util.Random;
+import java.util.TimeZone;
+
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
+
+import com.openexchange.ajax.config.AttributeWriter;
 import com.openexchange.ajax.config.BetaWriter;
 import com.openexchange.ajax.config.actions.GetRequest;
 import com.openexchange.ajax.config.actions.SetRequest;
@@ -63,6 +69,7 @@ import com.openexchange.ajax.framework.AbstractAJAXSession;
 import com.openexchange.ajax.user.actions.SetAttributeRequest;
 import com.openexchange.ajax.user.actions.SetAttributeResponse;
 import com.openexchange.exception.OXException;
+import com.openexchange.java.util.TimeZones;
 import com.openexchange.tools.RandomString;
 
 /**
@@ -75,13 +82,21 @@ public final class Bug26354Test extends AbstractAJAXSession {
     private static final String ATTRIBUTE_NAME = "testForBug26354";
 
     private static final int ITERATIONS = 100;
+    
+    private static final TimeZone[] TIME_ZONES = new TimeZone[3];
+    static {
+    	TIME_ZONES[0] = TimeZones.PST;
+    	TIME_ZONES[1] = TimeZones.UTC;
+    	TIME_ZONES[2] = TimeZones.EET;
+    }
 
-    private final BetaWriter[] writer = new BetaWriter[2];
+    private final AttributeWriter[] writer = new AttributeWriter[2];
     private final Thread[] thread = new Thread[writer.length];
 
     private AJAXClient client;
     private int userId;
-    private boolean origValue;
+    private boolean origBetaValue;
+	private String origTimeZoneValue;
 
     public Bug26354Test(String name) {
         super(name);
@@ -93,11 +108,20 @@ public final class Bug26354Test extends AbstractAJAXSession {
         super.setUp();
         client = getClient();
         userId = client.getValues().getUserId();
-        origValue = client.execute(new GetRequest(Tree.Beta)).getBoolean();
-        for (int i = 0; i < writer.length; i++) {
-            writer[i] = new BetaWriter(User.User1);
-            thread[i] = new Thread(writer[i]);
-        }
+        origBetaValue = client.execute(new GetRequest(Tree.Beta)).getBoolean();
+        origTimeZoneValue = client.execute(new GetRequest(Tree.TimeZone)).getString();
+        
+        writer[0] = new BetaWriter(User.User1);
+        thread[0] = new Thread(writer[0]);
+        writer[1] = new AttributeWriter(Tree.TimeZone, User.User1) {	
+        	private final Random r = new Random();
+			@Override
+			protected Object getValue() {
+				return TIME_ZONES[r.nextInt(3)].getID();
+			}
+		};
+		thread[1] = new Thread(writer[1]);
+        
         for (int i = 0; i < thread.length; i++) {
             thread[i].start();
         }
@@ -116,7 +140,8 @@ public final class Bug26354Test extends AbstractAJAXSession {
             final Throwable throwable = writer[i].getThrowable();
             assertNull("Expected no Throwable, but there is one: " + throwable, throwable);
         }
-        client.execute(new SetRequest(Tree.Beta, B(origValue)));
+        client.execute(new SetRequest(Tree.Beta, B(origBetaValue)));
+        client.execute(new SetRequest(Tree.TimeZone, origTimeZoneValue));
         assertTrue("Deleting the test attribute failed.", client.execute(new SetAttributeRequest(userId, ATTRIBUTE_NAME, null, false)).isSuccess());
         super.tearDown();
     }
