@@ -1,3 +1,7 @@
+* 2014-10-07 - steffen.templin@open-xchange.com
+
+ - Fix for bug 26354: Set user attributes without explicit database locking to avoid deadlocks.
+
 * 2014-10-06 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 34722: Removed foreign keys from mailaccount create table task
